# rhos-mcps

./: .dockerignore  .gitignore  Containerfile  DEVELOPERS.md  README.md  TODO.md  config.yaml.sample  pyproject.toml
.github/workflows/: build-and-push-mcps.yaml
scripts/: allow-deny-list.py  allow-deny-list.yaml  diff-allow-deny.py  get-crc-creds.sh
src/rhos_ls_mcps/: auth.py  logging.py  main.py  mcp_base.py  oc.py  oc_defaults.py  osc.py  settings.py  utils.py
