[project]
name = "rhos-ls-mcps"
version = "0.1.0"
description = "MCP Tools for RHOS-Lightspeed"
authors = [
    {name = "Gorka Eguileor", email = "geguileo@redhat.com"},
]
dependencies = ["mcp>=1.25.0", "openstackclient==4.0.0", "stevedore>=5.6.0", "pydantic>=2.12.5", "kubernetes>=35.0.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.scripts]
rhos-ls-mcps = "rhos_ls_mcps.main:main"

#[project.scriptspdm.scripts.rhos-ls-mcps]
#env = { DEBUG = "1" }
#cmd = "python -m rhos_ls_mcps.main"
#cmd = ["python", "-m", "rhos_ls_mcps.main"]
# env = { TYPE = "dev", PORT = "5000" }
# rhos-ls-mcps = { call = "rhos_ls_mcps.main" }
